--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/stylesheet.css">
+<link rel="stylesheet" href="css/about.css">
   <title>Charlott Feibig</title>
 </head>
 
@@ -12,18 +12,18 @@
   <!-- Header -->
 <header class="header">
     <ul id="nav">
-        <li><a href="index.html" class="active">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="works.html">WORKS</a></li>
         <li><a class="logo" href="index.html"><img src="imgs/logo_cf.png"></a>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="contact.html" class="active">CONTACT</a></li>
       </ul>
     </header>
 
-<!-- Content -->
-
+<div class="Mail">
+<a href="mailto:meine;mail;de">Write me a message!</a>
+</div>
 
   <footer>Charlott Feibig // charlottfeibig@gmail.com // 01797354311</footer>
-
 </body>
 </html>
