--- a/index.html
+++ b/index.html
@@ -3,31 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="css/stylesheet.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <title>Charlott Feibig</title>
+  <link rel="stylesheet" href="css/landingpage.css">
 </head>
-
-<body>
-
-  <!-- Header -->
-<header class="header">
-    <div id="logo">
-      <a href="index.html"><img src="imgs/logo_cf.png"></a>
+<body id="body">
+    <div id="landingpage">
+        <img src="imgs/logo_cf_gr.png" alt="" id="logo_front">
     </div>
-    <ul id="nav">
-        <li><a href="index.html" class="active">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="works.html">WORKS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
-    </header>
-
-</header>
-
-<!-- Content -->
-<div class="wrapper">
-  xyz
-</div>
-
+    <div>
+        <ul id="nav_lp">
+            <li><a href="works.html">WORKS</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </div>
 </body>
 </html>
